# commondata

./: MANIFEST.in  README.md  README_jp.md  build.bat  setup.cfg  upload.bat
src/commndata/: admin.py  apps.py  codes.py  forms.py  models.py  views.py
src/commndata/data/: グループ.csv  コードマスタ.csv  コードマスタ_with_error.csv  コード分類.csv  ユーザー.csv  俸給表取込エクセル設定.csv
src/commndata/locale/en/LC_MESSAGES/: django.po
src/commndata/locale/ja/LC_MESSAGES/: django.po
src/commndata/migrations/: 0001_initial.py  0002_auto_20210509_1007.py
src/commndata/templates/admin/: submit_line.html
src/commndata/templates/commndata/: basic_form.html  upload.html
tests/testsite/: admin.py  forms.py  settings.py
