[metadata]
name = commndata
version = 0.0.2
author = yujiwen
author_email = yujiwen@hotmail.com
description = Django Admin site plugin that defined some base models.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yujiwen/commondata
project_urls = 
bug tracker = https://github.com/yujiwen/commondata/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src